--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,5 +16,5 @@
 body {
   font-size: 14px;
   font-family: "Noto Sans KR", sans-serif;
-  background-color: #c5e4f7;
+  /* background-color: #c5e4f7; */
 }
